--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,12 +2,13 @@
 <html>
   <head>
     <title>Lista de Tarefas</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
   <body class="login">
     <h1>Login</h1>
-    <form action="/login" method="POST">
+    <form action="/login" method="POST" class="">
       <input class="input" name="username" type="text" /><br />
+      <input class="input" name="email" type="email" /><br />
       <input class="input" name="password" type="password" /><br />
       <input class="botaoSubmit" type="submit" value="Login" />
     </form>
