--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,7 @@
     margin-top: 200px;
     width: 300px;
     height: 400px;
-    background-color:#5d5d5d;
+    background-color:#fff;
     text-align: center;
     color:black;
     font-family: 'Roboto', sans-serif;
