--- a/views/layouts/default/index.ejs
+++ b/views/layouts/default/index.ejs
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarefas</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>#<%- locals.layoutVariables.title %></title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <%- include('header.ejs') %>
+    <%- include('./header')%>
+    <header></header>
     <nav></nav>
-    <main><%- body %></main>
+    <main>
+        <%- body %>
+    </main>
     <footer></footer>
 </body>
 </html>
