--- a/views/tarefas.ejs
+++ b/views/tarefas.ejs
@@ -6,12 +6,17 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<body id="background">
+<body id="background" class="bg-black">
     <div id="listaTarefa">
         <h1>LISTA DE TAREFAS</h1>
         <ul>
             <% tarefas.forEach(tarefa => { %>
-                <li><%= tarefa.title %></li>
+                <li class="text-lg text-black "><%= tarefa.tarefa %></li>
+                <div>
+                    <a href="/tarefas/delete/<%- tarefa.id %>">
+                        Delete
+                    </a>
+                </div>
             <% }); %>
         </ul>
         <form action="/tarefa" method="POST">
